flux/https/ingressroutes.yaml
---
# Grafana IngressRoute with TLS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls:
    secretName: unifi-localdomain-tls
  routes:
    - match: Host(`grafana.unifi.localdomain`)
      kind: Rule
      services:
        - name: monitoring-monitoring-grafana
          port: 3000

---
# Prometheus IngressRoute with TLS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls:
    secretName: unifi-localdomain-tls
  routes:
    - match: Host(`prometheus.unifi.localdomain`)
      kind: Rule
      services:
        - name: monitoring-monitoring-kube-prometheus
          port: 9090

---
# Alertmanager IngressRoute with TLS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls:
    secretName: unifi-localdomain-tls
  routes:
    - match: Host(`alertmanager.unifi.localdomain`)
      kind: Rule
      services:
        - name: monitoring-monitoring-kube-alertmanager
          port: 9093
